# gpt-2-lesson

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  introduction.txt  main.py  pyproject.toml
scripts/: train.py
src/: data_processing.py  model.py  training.py  utils.py
