[tool.poetry]
name = "my-llm-project"
version = "0.1.0"
description = "A custom LLM implementation for learning purposes"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
numpy = "^1.26.4"
tqdm = "^4.62.0"
tiktoken = "^0.6.0"
datasets = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
